# Cognocere

./: .gitignore  README.md
backend/: auth_dependencies.py  auth_router.py  config.py  main.py  pyproject.toml  requirements.txt  user_db.py
backend/models/: auth_schemas.py  schemas.py
backend/modules/: clarification.py  context_curation.py  evaluation.py  plan_generation.py  report_generation.py  web_search.py
backend/services/: auth_service.py  llm_service.py  serper_service.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
frontend/src/components/: AuthCallback.jsx  ClarificationQuestions.jsx  FinalReport.jsx  Header.jsx  InputForm.jsx  LLMInteractionComponent.jsx  Login.jsx  ProcessFlow.jsx  ProfileSettings.jsx  ProtectedRoute.jsx  ResearchProgress.jsx  StepIndicator.jsx  StreamingDisplay.jsx  UnifiedResearchView.jsx  UserReports.jsx  VerticalResearchTimeline.jsx
frontend/src/components/ui/: magic-card.jsx
frontend/src/contexts/: AuthContext.jsx  LLMContext.jsx  ResearchContext.jsx
frontend/src/services/: api.js
frontend/src/utils/: streamUtils.js
