[project]
name = "deep-researcher-backend"
version = "0.1.0"
dependencies = [
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==2.4.1",
    "async-lru==2.0.4",
    "attrs==25.1.0",
    "authlib==1.5.1",
    "babel==2.16.0",
    "beautifulsoup4==4.13.3",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "comm==0.2.2",
    "cryptography==44.0.2",
    "debugpy==1.8.7",
    "decorator==5.1.1",
    "deprecation==2.1.0",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "ecdsa==0.19.0",
    "email-validator==2.1.1",
    "fastapi==0.115.11",
    "fastapi-sessions==0.3.2",
    "frozenlist==1.5.0",
    "google==3.0.0",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.24.2",
    "google-api-python-client==2.168.0",
    "google-auth==2.39.0",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.8.5",
    "googleapis-common-protos==1.70.0",
    "gotrue==2.11.4",
    "groq==0.20.0",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jiter==0.8.2",
    "multidict==6.1.0",
    "oauthlib==3.2.2",
    "openai==1.65.2",
    "packaging==24.2",
    "postgrest==0.19.3",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-jose==3.4.0",
    "python-multipart==0.0.20",
    "realtime==2.4.1",
    "requests==2.32.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio",
    "soupsieve==2.6",
    "sse-starlette==2.2.1",
    "starlette==0.46.0",
    "storage3==0.11.3",
    "strenum==0.4.15",
    "supabase==2.13.0",
    "supafunc==0.9.3",
    "tornado==6.4.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20241003",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.0",
    "tzdata==2024.2",
    "uri-template==1.3.0",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "webcolors==24.8.0",
    "webencodings==0.5.1",
    "websockets==14.2",
    "websocket-client==1.8.0",
    "yarl==1.18.3",
    "pydantic-settings>=2.9.1",
]
